# python-fwf

./: .gitignore  .pre-commit-config.yaml  .ruffignore  Dockerfile  LICENSE.md  README.md  SECURITY.md  doc8.ini  pyproject.toml  release.py  release.sh  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  docs.yml  pages.yml  pipelinit.python.lint.yaml  publish.yml  qa.yml  test.yml
docs/: Gemfile  _config.yml  api-columns.rst  api-descriptors.rst  api-hydrating.rst  api-readers.rst  api-renders.rst  conf.py  contribute.rst  getting-started.md  getting-started.rst  index.md  index.rst  modules.rst
docs/api/: columns.md  descriptors.md  hydrating.md  index.md  readers.md  renders.md
fwf/: readers.py
pybatchfile/: __init__.py  classutils.py  columns.py  descriptors.py  hydrating.py  readers.py
pyfwf/: __init__.py  columns.py  descriptors.py  hydrating.py  readers.py  renders.py
tests/: __init__.py  test_classutils.py  test_columns.py  test_coverage_final.py  test_coverage_gaps.py  test_coverage_readers.py  test_coverage_renders.py  test_descriptors.py  test_final.py  test_gaps.py  test_hydrating.py  test_readers.py  test_renders.py
tests/assets/: all_content_are_right.batch  example01.html  example01.json  example01.md  example01.rst  example01.rst.example  example01_are_right.batch  example01_are_right.fwf  example01_are_right_win.batch  example01_are_right_win.fwf  example01_wrong_line_size.batch  example01_wrong_line_size.fwf
