[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfwf"
version = "1.0.3"
description = "Python library to manipulate fixed width file (FWF)"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "kelsoncm" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
    "black>=26.3.1",
    "ruff>=0.15.11",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "bandit>=1.9.4",
    "pytest-coverage-gate>=1.0.3",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "flake8-bandit>=4.1.1",
    "doc8>=2.0.0",
]
#    "rstcheck[sphinx]>=6.2.5",

[tool.coverage.run]
source = ["pyfwf"]
omit = ["tests/*", "sandbox/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120
exclude = ["*.fwf"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfwf"]

[tool.black]
line-length = 120
exclude = '\\.fwf$'

[tool.flake8]
ignore = ["E203"]
max-line-length = 127
max-complexity = 5
select = ["E9", "F63", "F7", "F82", "S"]
