[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfwf"
version = "1.0.1"
description = "Python library to manipulate fixed width file (FWF)"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "kelsoncm" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "black>=26.3.1",
    "ruff>=0.15.11",
    "doc8>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pytest-coverage-gate>=1.0.3",
    "responses>=0.26.0",
]
#    "rstcheck[sphinx]>=6.2.5",

[tool.coverage.run]
source = ["pyfwf"]
omit = ["tests/*", "sandbox/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120
exclude = ["*.fwf", "tests/assets/example01.rst"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfwf"]

[tool.black]
line-length = 120
    exclude = '''
    (\\.fwf$)
    '''
